Jetpack compose implementation, older implementation will be discarded

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Todo">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -18,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.creation.CreateTaskActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
