--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,12 @@ android {
         jvmTarget = '1.8'
     }
 
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.0.0-rc02'
     }
 }
 
@@ -45,11 +49,20 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+
+    // Jetpack Compose
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.compose.animation:animation:1.1.1'
+    implementation 'androidx.compose.ui:ui-tooling:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha03'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.1.1'
 
     // Kotlin
     implementation 'com.google.android.material:material:1.5.0'
@@ -58,7 +71,7 @@ dependencies {
 
     // Google
     implementation 'com.google.android.material:material:1.5.0'
-    implementation 'com.google.firebase:firebase-bom:29.0.4'
+    implementation 'com.google.firebase:firebase-bom:29.1.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.0.1'
 
     // Dagger2
