--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,9 +74,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-bom:29.1.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.0.1'
 
-    // Dagger2
-    implementation 'com.google.dagger:dagger:2.40.5'
-    kapt 'com.google.dagger:dagger-compiler:2.40.5'
+    // Koin
+    implementation "io.insert-koin:koin-android:3.1.4"
 
     // Test
     testImplementation 'junit:junit:4.13.2'
