Compose navigation and Hilt implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.home.HomeActivity"
-            android:exported="true" />
-
-        <activity
-            android:name=".ui.creation.CreateTaskActivity"
-            android:exported="true" />
+        <activity android:name=".HomeActivity" android:exported="true" />
 
     </application>
 
