--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -64,10 +65,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha04'
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.1.1'
+    implementation "androidx.navigation:navigation-compose:2.4.1"
 
     // Kotlin
     implementation 'com.google.android.material:material:1.5.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Google
@@ -78,6 +80,11 @@ dependencies {
 
     // Koin
     implementation "io.insert-koin:koin-android:3.1.4"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.35"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kapt "com.google.dagger:hilt-android-compiler:2.35"
 
     // Test
     testImplementation 'junit:junit:4.13.2'
